--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>TIC TAC TOE!</h1>
+    <p>Lets Play!!</p>
+
+    <div id = "container">
+        <div id = "cell" data-cell="1"></div>
+        <div id = "cell" data-cell="2"></div>
+        <div id = "cell" data-cell="3"></div>
+        <div id = "cell" data-cell="4"></div>
+        <div id = "cell" data-cell="5"></div>
+        <div id = "cell" data-cell="6"></div>
+        <div id = "cell" data-cell="7"></div>
+        <div id = "cell" data-cell="8"></div>
+        <div id = "cell" data-cell="9"></div>
+    </div>
 </body>
+<script src="script.js"></script>
 </html>
