--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 </head>
 <body>
     <h1>TIC TAC TOE!</h1>
+    <h1 class ="display"></h1>
     <p>Lets Play!!</p>
 
     <div id = "container">
-        <div id = "cell" data-cell="1"></div>
-        <div id = "cell" data-cell="2"></div>
-        <div id = "cell" data-cell="3"></div>
-        <div id = "cell" data-cell="4"></div>
-        <div id = "cell" data-cell="5"></div>
-        <div id = "cell" data-cell="6"></div>
-        <div id = "cell" data-cell="7"></div>
-        <div id = "cell" data-cell="8"></div>
-        <div id = "cell" data-cell="9"></div>
+        <div class = "cell" data-cell="1"></div>
+        <div class = "cell" data-cell="2"></div>
+        <div class = "cell" data-cell="3"></div>
+        <div class = "cell" data-cell="4"></div>
+        <div class = "cell" data-cell="5"></div>
+        <div class = "cell" data-cell="6"></div>
+        <div class = "cell" data-cell="7"></div>
+        <div class = "cell" data-cell="8"></div>
+        <div class = "cell" data-cell="9"></div>
     </div>
 </body>
 <script src="script.js"></script>
