--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class = "cell" data-cell="8"></div>
         <div class = "cell" data-cell="9"></div>
     </div>
+    <button id="reset">Reset</button>
 </body>
 <script src="script.js"></script>
 </html>
